Fixed alignment

--- a/src/app/cardstack/cardstack.component.css
+++ b/src/app/cardstack/cardstack.component.css
@@ -1,40 +1,29 @@
-
-.image{
-  max-width: 50%;
-  max-height: 50%;
-}
-
 .foot{
   position: fixed;
-  width:95%;
-  bottom:0px;
+  width: 100%;
+  height: 2em;
+  bottom:1em;
 }
 .split{
   display: block;
   float:right;
 }
 .stack {
-  height: 100%;
-  width: 80%;
-  display:inline-block;
-  }
+  margin: 0 auto;
+  position: relative;
+  padding-top: 1em;
+  /* height: 90vh; */
+  padding-left: 1em !important;
+  padding-right: 1em !important;
+  /* padding-bottom: 30em; */
+  
+}
 .card {
-    width: 50%;
-    height: 60%;
-    list-style: none;
-    background: #fff;
-    border-radius: 5px;
+    width: calc(100% - 2em);
     text-align: center;
-    position: absolute;
-    box-shadow: 0 0 2px rgba(0, 0, 0, 0.2), 1px 1px 1px rgba(0, 0, 0, 0.2);
-    line-height: 15em;
+    position: fixed;
     cursor: default;
-  }
-#viewport li.in-deck:nth-child(3) {
-      top: 2px;
-      transform: translate(2px, 2px) rotate(0.4deg);
-  }
-#viewport li.in-deck:nth-child(2) {
-      top: 4px;
-      transform: translate(-4px, -2px) rotate(-1deg);
+}
+.inner-card{
+  height: 100%;
 }
